# patternset

behavioral/tasks/: CMakeLists.txt  log_command.cpp  log_command.h  main.cpp  mess_chain_resp.cpp  mess_chain_resp.h  observer.cpp  observer.h
generative/task/: CMakeLists.txt  main.cpp  sql_query_builder.cpp  sql_query_builder.h
structural/task1/: main.cpp
structural/task2/: main.cpp
